--- a/weblib/client/index.css
+++ b/weblib/client/index.css
@@ -1,3 +1,4 @@
 @import url('./base/base.css');
 @import url('./hamburger/hamburger.css');
 @import url('./carousel/carousel.css');
+@import url('./flipcard/flipcard.css');
