--- a/weblib/client/hamburger/hamburger.css
+++ b/weblib/client/hamburger/hamburger.css
@@ -1,10 +1,12 @@
 /*  hamburger menu  */
-.syn-hamburger > ul { list-style: none; margin: 0; }
 .syn-hamburger ul { padding: 0; }
+.syn-small .syn-hamburger > ul { list-style: none; margin: 0; position: fixed; width: 100%; text-align: left; left: 0; height: 100%; background: rgba(255, 255, 255, .8); }
 .syn-hamburger ul > li li { display: block; white-space: nowrap; }
 .syn-large .syn-hamburger > button { display: none; }
+.syn-small .syn-hamburger > button { background: transparent; border: solid 1px #888; font-size: 1.3rem; }
 .syn-large .syn-hamburger > ul > li { display: inline-block; position: relative; }
-.syn-small .syn-hamburger > ul > li { display: block; }
+.syn-small .syn-hamburger > ul > li { display: block; margin: 1rem 0; }
 .syn-small .syn-hamburger:not(.syn-hamburger-open) > ul { display: none; }
 .syn-large .syn-hamburger > ul > li > ul { position: absolute; display: none; }
 .syn-large .syn-hamburger > ul > li:hover > ul { display: block; }
+.syn-small .syn-hamburger { text-align: right; }
